Add JWToken authorization